# matsuzawa-20260215

./: pyproject.toml
.research/: research_history.json
config/: config.yaml
config/run/: comparative-1-gsm8k.yaml  comparative-1-svamp.yaml  proposed-gsm8k.yaml  proposed-svamp.yaml
src/: evaluate.py  inference.py  main.py  preprocess.py
